2008-06-30  Matthias Clasen  <mclasen@redhat.com>

	Bug 538836 – make check failure on PPC and ALPHA: pltcheck.sh on
	g_atomic_pointer_get

	* pltcheck.sh: Allow g_atomic_pointer_get, to fix 'make check'
	on ppc and alpha. Reported by Mart Raudsepp

2008-06-29  Matthias Clasen  <mclasen@redhat.com>

	* tests/Makefile.am: 
	* tests/memory-output-stream.c: Add some tests for
	GMemoryOutputStream. 

2008-06-29  Matthias Clasen  <mclasen@redhat.com>

	Bug 540423 – unrecoverable error after g_seekable_truncate(seekable,
	0, ...)

	* gmemoryoutputstream.c (array_resize): Handle truncation to
	zero correctly. Reported by Akira Tagoh

2008-06-29  Matthias Clasen  <mclasen@redhat.com>

	* gmemoryoutputstream.c: Trivial doc fixes

2008-06-29  Matthias Clasen  <mclasen@redhat.com>

	Bug 540802 – g_list_prepend doesn't concat lists

	* giomodule.c (_g_io_modules_ensure_loaded): Don't g_list_prepend
	one list to another. Pointed out by Jan Arne Petersen

2008-06-28  Michael Natterer  <mitch@imendio.com>

	* gfileicon.c: remove semicolons from G_IMPLEMENT_INTERFACE().

2008-06-18  Matthias Clasen <mclasen@rdhat.com>

	* glocalfileinfo.c: Don't do fallback for user-home and user-desktop
	to avoid problems with partial icon themes.
	
2008-06-17  Hans Breuer  <hans@breuer.org>

        * gwin32mount.[ch] gwin32volumemonitor.[ch] : bits and pieces from 
        gtk-2-12 and gunix*.[hc] to make the file chooser show drive letter
	access again on win32, see bug #538127
        * giomodule.c : ensure GWin32VolumeMonitor is registered
        * glocaldireoctorymonitor.c : initial state on win32 is_mounted=TRUE
        * Makefile.am makefile.msc : updated

2008-06-16  Hans Breuer  <hans@breuer.org>

	* glocalfileenumerator.c(_g_local_file_enumerator_new) : declaration 
	and initialization in one step avoids c99ism

2008-06-16  Christian Persch  <chpe@gnome.org>

	* gio/gappinfo.c
	* gio/gbufferedinputstream.c
	* gio/gcancellable.c
	* gio/gdatainputstream.c
	* gio/gdesktopappinfo.c